--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bechitra.walleto">
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SET_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -17,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddSpending"></activity>
-    </application>
 
+        <receiver android:name=".AlertManager"/>
+
+    </application>
 </manifest>
