--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:[2.9.2]'
 
 }
