--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddSpending"
+        <activity android:name=".SpendingOrEarningDataSetter"
             android:screenOrientation="portrait"></activity>
 
         <receiver android:name=".AlertManager"/>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="119e45c354bbe3c578a01ace2acbf907809502c4" />
     </application>
 </manifest>
